--- a/styles/style.css
+++ b/styles/style.css
@@ -67,3 +67,10 @@ span{
 button{
     border:none;
 }
+
+.github-link a{
+    margin-left: 300px;
+    text-decoration: none;
+    font-size: 24px;
+    
+}
